# loku

./: .gitignore  Cargo.toml  README.org  config.example.toml  flake.nix  tasks.org
crates/lib/: Cargo.toml
crates/web/: Cargo.toml
crates/web/src/: config.rs  lib.rs  logging.rs  main.rs  web_base.rs
crates/web/src/routes/: browse.rs
crates/web/tests/: integration_test.rs
frontend/public/: index.html
frontend/src/: Api.elm  Main.elm  Route.elm
frontend/src/Page/: Browse.elm  Player.elm
nix/modules/: web.nix
