[package]
name = "loku-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "loku_web"
path = "src/lib.rs"

[[bin]]
name = "loku-web"
path = "src/main.rs"

[dependencies]
loku-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
prometheus = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
sd-notify = { workspace = true }

# tracing-journald connects to the systemd journal socket; unix-only.
[target.'cfg(unix)'.dependencies]
tracing-journald = { workspace = true }
